...
          title: "Camera",
          headerShown: false,
          tabBarIcon: ({ focused }) => (
            <TabIcon source={icons.camera} focused={focused} title="Camera" />
          ),
          tabBarStyle: { display: "none" },
          tabBarButtonTestID: "camera-tab-button",
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: "Profile",
...
