...
  return (
    <View className="flex-[1] justify-center">
      <CameraView ref={camRef} style={{ flex: 1 }} facing={camFacing}>
        <GuidanceHoverText
          text={
            activeOption === "add"
              ? "Take a picture to add your item"
              : "Take a picture to find a match"
          }
          top={36}
        />

        <BottomSectionItemCameraControls
          activeOption={activeOption}
...
