...
    }),
  );

  return (
    <View className="flex-1">
      <FlashList
        testID="__item-list__"
        ref={listRef}
        onScroll={onScroll}
        onContentSizeChange={onLoad}
        scrollEventThrottle={16}
        data={loading ? skeletons : assets}
        estimatedItemSize={50}
...
          } else if (asset.status === "completed") {
            variant = "highlighted";
          }

          return (
            <View
              testID="__asset-card__"
              className={`flex-1 mx-5 ${index % 2 === 0 ? "mr-2.5" : "ml-2.5"}`}
            >
              {asset.type === "item" ? (
                <ItemCard
                  item={asset}
                  onPress={() => onCardPress(asset)}
...
