...
          >
            {addText || "Add"}
          </Text>
        </TouchableOpacity>

        <TouchableOpacity
          testID="__find-option-btn-item-camera-controls__"
          onPress={onPressFind}
          className={`px-8 py-2 ${
            activeOption === "find" ? "bg-white" : "bg-transparent"
          }`}
        >
          <Text
...
          <Ionicons name="camera-reverse-outline" size={28} color="white" />
        </TouchableOpacity>
      )}

      {/* Capture button (center) */}
      <TouchableOpacity
        testID="__shutter-btn-item-camera-controls__"
        onPress={onPressCapture}
        className="size-20 rounded-full bg-white border-2 border-gray-300 items-center justify-center"
        style={{ elevation: 3 }} /* for Android shadow */
      >
        <View className="size-16 rounded-full bg-white" />
      </TouchableOpacity>
...
