...
                    />
                  )}

                  {items?.slice(0, 3).map((item) => (
                    <View key={item.id} className="">
                      <TouchableOpacity
                        testID="__item-visual-asset-finder__"
                        onPress={() => handleSelectItem(item)}
                      >
                        <Image
                          source={{ uri: item.imageUrl }}
                          className="size-16 rounded-md"
                        />
...
