...
  } else if (variant === "highlighted") {
    borderClass = "border-4 border-primary-200";
  }

  return (
    <TouchableOpacity
      testID="__container-card__"
      onPress={onPress}
      onLongPress={onLongPress}
      disabled={variant === "loading" || variant === "generating"}
      className={`flex-1 w-full h-44 mt-4 rounded-2xl bg-accent shadow-lg shadow-black-100/70 relative overflow-hidden ${borderClass}`}
    >
      {variant === "default" && <BackgroundGradient />}
...
