...
            resizeMode="cover"
          />
        )}
        <TextInput
          value={searchText}
          onChangeText={handleTextSearch}
          placeholder="Search anything"
          className="text-sm font-rubik text-black-300 flex-1"
        />
      </View>

      {(searchText || searchImageUri) && (
        <TouchableOpacity
...
